<?xml version="1.0"?>
<package>
  <name>jps</name>
  <version>0.0.2</version>
  <description>The jump point search package</description>
  <maintainer email="olesyakrindach@gmail.com">Olesya Krindach</maintainer>
  <license>TODO</license>
  <author email="olesyakrindach@gmail.com">Olesya Krindach</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>tf</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>map_server</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
